<resources>
    <string name="app_name">Aplikasi Antrian Klinik</string>
    <string name="ranjana_skin_clinic">Ranjana Skin Clinic</string>
    <string name="or">OR</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="klinik_perawatan_kulit">Klinik Perawatan Kulit</string>
    <string name="jumlah_sisa_antrian">Jumlah Sisa Antrian :</string>
    <string name="antrian">ANTRIAN</string>
    <string name="informasi_antrian">Informasi Antrian</string>
    <string name="informasi_klinik">Informasi Klinik</string>
    <string name="artikel_kesehatan">Artikel Kesehatan</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="home">Home</string>
    <string name="my_schedule">My Schedule</string>
    <string name="history">History</string>
    <string name="jadwal_dokter">Jadwal Dokter</string>
    <string name="profile">Profile</string>
    <string name="daftar_pasien">Daftar Pasien</string>
    <string name="senin">SENIN</string>
    <string name="selasa">SELASA</string>
    <string name="rabu">RABU</string>
    <string name="kamis">KAMIS</string>
    <string name="sabtu">SABTU</string>
    <string name="minggu">MINGGU</string>
    <string name="daftar_dokter">Daftar Dokter</string>
    <string name="tanggal_konsultasi">Tanggal Konsultasi</string>
    <string name="masukkan_foto_keluhan">Masukkan Foto Keluhan</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="dokter_spesialis_kulit">Dokter Spesialis Kulit</string>
    <string name="jadwal_konsultasi_anda">Jadwal Konsultasi Anda</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="notifikasi">Notifikasi</string>

</resources>