<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_halaman_utama"
    android:padding="20dp"
    android:scrollbars="vertical"
    android:theme="@style/Theme.MyApp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/nama_klinik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/logo_klinik"
            android:layout_marginTop="60dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:text="@string/ranjana_skin_clinic"
            android:textColor="@color/colorAplikasi"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:backgroundTint="@color/colorButtonLogin"
            android:text="@string/log_in"
            android:textColor="@color/colorAplikasi"
            android:textStyle="bold"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/colorButtonLogin"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="3dp"
            app:strokeColor="@color/colorButtonLogin"
            android:text="@string/sign_up"
            android:textColor="@color/colorButtonLogin"
            android:textStyle="bold"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            android:focusable="true" />

    </LinearLayout>



</ScrollView>