<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@color/colorAplikasiMuda"
    android:layout_gravity="center"
    android:theme="@style/Theme.MyApp"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/rounded_background"
        android:padding="20dp"
        >

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="55dp"
            android:layout_toLeftOf="@id/judul_login"
            android:background="@color/colorAplikasiMuda"/>

        <TextView
            android:id="@+id/judul_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorAplikasiMuda"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"

            />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="55dp"
            android:layout_toRightOf="@id/judul_login"
            android:background="@color/colorAplikasiMuda"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginTop="70dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MyTextInputLayout"
                android:hint="@string/email"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconContentDescription="@string/email"
                app:errorEnabled="true"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MyTextInputLayout"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconContentDescription="@string/email"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signin"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorButtonLogin"
                android:text="@string/sign_in"
                android:textColor="@color/colorAplikasi"
                android:textStyle="bold"
                android:textSize="18sp"
                app:cornerRadius="15dp"
                android:focusable="true" />


        </LinearLayout>

    </RelativeLayout>


    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:background="@drawable/round_login"
        android:padding="20dp"
        android:src="@drawable/logo_klinik"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"

        />

</RelativeLayout>